# hardware

./: hk.pkl  mise.toml  pyproject.toml  readme.md
arduino/: arduino.md
arduino_pwm/: arduino_pwm.md
arduino_pwm/fit_curve/: fit_curve.py
arduino_pwm/pwm_3V/: arduino_pwm_3V.ino
keeb_pcb/: akko_3068BPLUS_sizes.txt  links.txt  space-stab-rotate180_68_KLE_layout.txt  vainlla_68_KLE_layout.txt  vanilla_68_layout.json
keeb_pcb/Akko_3068B_plus_plate/: 3298ede4641a7cb438da9845e862e1fef86bb02a_switch.dxf  3298ede4641a7cb438da9845e862e1fef86bb02a_switch.eps
keeb_pcb/Akko_3068B_plus_plate_freecad/: 3298ede4641a7cb438da9845e862e1fef86bb02a_switch.eps  freecad_3068Bplus_plate.FCStd  freecad_3068Bplus_plate.FCStd1
keeb_pcb/Akko_3068_plate/: 101e0d493cafebd091e365482ec385ba831453f7_switch.dxf
keeb_pcb/generated_pcb/: keyboard.kicad_pcb  keyboard.kicad_pro  keyboard.kicad_sch  keyboard.sch
keeb_pcb/grabert-modifying/: .gitignore  LICENSE  README.md
keeb_pcb/keeb_pcb_kicadproj/: keyboard.kicad_pcb  keyboard.kicad_pro  keyboard.kicad_sch  keyboard.sch
keeb_pcb/keebfromblank/: #auto_saved_files#  fp-info-cache  keebfromblank.kicad_prl  keebfromblank.kicad_pro  keebfromblank.kicad_sch
laundry_card/: AtmelATR_LIST.txt  iso7816_interface.pde  noqa_CryptoCardScript.py
laundry_card/AtmelCrypto/: AtmelCrypto.sln
laundry_card/Parallax Smart Card Arduino Samples/: README.md
light_switch/: light_switch.md
mk4s/: config_bundle.ini  mk4s.md
wave_tat/: .gitignore  README.md  chunk_wav.py  make_img.sh  move_wav.sh  progress.txt  proj1.aup  wave-tat.yml
(+42 files in other folders)
